--- a/MyTohou/MyTohou.vcxproj.filters
+++ b/MyTohou/MyTohou.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\Image.gif">
+      <Filter>资源文件</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
